--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        border-radius:10px; 
        padding: 0% 0%; 
        height:40%; 
-       width:80%; 
+       width360px; 
        margin:2% 10% 2% 10%; 
        }
        main 
@@ -36,11 +36,11 @@
        p 
        { 
        font-family:verdana; 
-       font-size:20pt; 
+       font-size:20px; 
        color:; 
        text-shadow:1px 1px 1px #212364;
        text-indent:2ch; 
-       margin:10px auto 10px auto; 
+       margin:20px auto 20px auto; 
        }
     </style>    
 </head>
