--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        width:90%; 
        height:90%; 
        margin:2% auto 50% auto; 
-       padding:20px; 
+       padding:50%; 
        }
        p 
        { 
