--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        border-radius:10px; 
        padding: 0% 0%; 
        height:40%; 
-       width360px; 
+       width:60%; 
        margin:2% 10% 2% 10%; 
        }
        main 
