--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
        solid #ddd; 
        border-radius:10px; 
        padding: 0% 0%; 
-       height:40%; 
-       width:60%; 
+       width:50%; 
        margin:2% 10% 2% 10%; 
+       display: block;
+       margin-left: auto;
+       margin-right: auto;
        }
        main 
        { 
        border:1px 
        solid #ddd; 
        border-radius:35px; 
-       width:90%; 
+       width:60%; 
        height:90%; 
        margin:2% auto 50% auto; 
        padding:50%; 
