--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        border:1px 
        solid #ddd; 
        border-radius:35px; 
-       width:60%; 
+       width:500x; 
        height:90%; 
        margin:2% auto 50% auto; 
        padding:50%; 
