--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
        body
        {
-       height:1200px;
+       height:90%;
        background:#d1e4e4;
        color:#000b0b;
        }
