--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        border-radius:35px; 
        width:90%; 
        height:90%; 
-       margin:40% auto 80% auto; 
+       margin:25% 30% 50% 30%; 
        padding:1px; 
        }
        p 
