--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        img 
        { 
        border:1px;
-       solid #ddd; 
+       solid:#ddd; 
        border-radius:10px; 
        padding: 0% 0%; 
        height:40%; 
