--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
        main 
        { 
        border:1px 
-       solid #ddd; 
+       solid:#ddd; 
        border-radius:35px; 
        width:90%; 
        height:90%; 
-       margin:25% 30% 50% 30%; 
+       margin:25% 30% 50% 60%; 
        padding:1px; 
        }
        p 
