--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
        border:1px 
        solid:#ddd; 
        border-radius:35px; 
-       width:90%; 
+       width:50%; 
        height:90%; 
-       margin:25% 30% 50% 60%; 
+       margin:25% auto 50% auto; 
        padding:1px; 
        }
        p 
